# redox-EVA

./: ANALISE_DRIVER_NPU.md  COMPILE_REDOX.md  New Text Document.txt  PROJECT_STATUS.md  README.md  STATUS_COMPILACAO.md  VERIFICATION.md  claude.md  futuro.md  monitor_instalacao.ps1  recall.md  test_inference.rs
MD/: BUILD_EVA_OS.md  FINAL_SUMMARY.md  NPU-2.md  NPU-3.md  NPU.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  RENAME_GUIDE.md  claude.md  fase2.md  fase3.md  fase4.md  fase5.md  fase6.md  fase7.md  fase8.md  features.md
drive/: COMMUNITY_SUBMISSION.md  Cargo.toml  README.md  boot.rs  dma.rs  hw_mtl.rs  inference.rs  main.rs  mmio.rs  pci.rs  recipe.toml  scheme.rs  status.rs
eva-daemon/: .gitignore  Cargo.toml  Cargo_phase1.toml  LICENSE  QUICKSTART.md  README.md  setup.bat  setup.sh
eva-daemon/src/: animations.rs  audio.rs  command_executor.rs  eva_mind.rs  gemini.rs  logging.rs  main.rs  main_phase1.rs  session.rs  statistics.rs  status_indicator.rs  stt.rs  terminal_ui.rs  tls.rs  vad.rs  wake_word.rs  websocket.rs
eva-daemon/src/timemachine/: capture.rs  embeddings.rs  index.rs  mod.rs  npu_delegate.rs  ocr.rs  search.rs  storage.rs
openvino-npu-standalone/: CMakeLists.txt  README.md  TASKS.md  npu_plugin.h
openvino-npu-standalone/src/: npu_plugin.cpp
openvino-npu-standalone/tests/: test_basic.cpp
